Update AJAX functions to properly serve CSRF token

--- a/server/views/pages/login.handlebars
+++ b/server/views/pages/login.handlebars
@@ -21,9 +21,7 @@
     {{!-- Overwrite the main content --}}
     {{#extend "main"}}
         <div id="content">
-            <div id="form">The form should be displayed here.</div>
-            <button id="loginButton">Login</button>
-            <button id="signupButton">Signup</button>
+            {{> form }}
         </div>
     {{/extend}}
     {{!-- Provide this page's header --}}
