Issue with CSRF token

--- a/server/views/partials/form.handlebars
+++ b/server/views/partials/form.handlebars
@@ -14,6 +14,7 @@
       <label for="verifyPassword">Verify Password</label>
       <input id="verifyPassword" type="password" class="form-control" placeholder="Verify your password" />
     </div>
+    <input type="hidden" name="_csrf" value={{csrfToken}} />
     <button type="submit" class="btn btn-primary">Sign Up</button>
   </form>
 </div>
